<resources>
    <string name="app_name">ApplesToApples</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_groupId">Game ID</string>
    <string name="action_join">Join a game</string>
    <string name="action_create">Create a game</string>
    <string name="action_begin">Begin Game</string>
    <string name="action_get_id">Get game ID</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_groupId">This is not a valid Group.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="game_id">1234</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="title_activity_waiting">WaitingActivity</string>
</resources>
