<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorGreen"
    tools:context="com.example.julie.applestoapples.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/login_form_signIn" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Back"
                android:onClick="onClick"
                android:clickable="true"
                android:id="@+id/back_text" android:visibility="gone" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@drawable/appleslogo"/>

            <Button android:id="@+id/create_game_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_create"
                android:textStyle="bold" />

            <Button android:id="@+id/join_game_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_join"
                android:textStyle="bold" />



            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/name" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_name"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" android:visibility="gone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/groupId" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_groupId"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_begin"
                    android:imeOptions="actionUnspecified" android:inputType="text"
                    android:maxLines="1" android:singleLine="true"
                    android:visibility="gone" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/begin_game_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_begin"
                android:textStyle="bold" android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
